Issue GRUND-221: Slimmed tabbar further down. Adjusted icon alignment(vertical). Removed top margin from header boxes

--- a/scss/modules/_boxes.scss
+++ b/scss/modules/_boxes.scss
@@ -71,6 +71,16 @@ $boxes-spacing: 30px;
       }
     }
 
+    &.has-no-top-spacing {
+      @include breakpoint($breakpoint-desk) {
+        margin-top: 0;
+
+        &:not(:first-child) {
+          margin-top: 0;
+        }
+      }
+    }
+
     &.is-villa {
       background-color: $theme-color-villa;
     }
