--- a/scss/modules/_header-subpage.scss
+++ b/scss/modules/_header-subpage.scss
@@ -8,7 +8,7 @@
 /* Styles
    ========================================================================== */
 
-$header-spacing: 30px;
+$header-spacing: 25px;
 
 .header-subpage {
   @include breakpoint($breakpoint-desk) {
